<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/paddingBottom"
        android:text="@string/label_editRss"
        android:textAlignment="center"
        android:textColor="@color/colorTextInDialog"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/text_checkEditRss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/paddingBottom"
        android:textAlignment="center"
        android:visibility="invisible"
        android:textColor="@color/accent_pressed"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical|right"
            android:text="@string/label_nameRss" />

        <EditText
            android:id="@+id/edit_name_rss"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/example_name_rss"
            android:inputType="text"
            android:textColor="@color/colorTextInDialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical|right"
            android:text="@string/ladel_urlRss" />

        <EditText
            android:id="@+id/edit_url_rss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textUri"
            android:textColor="@color/colorTextInDialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:divider="@drawable/separator_vertical"
        android:dividerPadding="4dp"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnActionDlg"
            android:text="@string/btn_edit_rss"
            android:textColor="@color/colorTextOnView" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnActionDlg"
            android:text="@string/text_cancelbtn"
            android:textColor="@color/colorTextOnView" />

    </LinearLayout>

</LinearLayout>